# todo-lambda

./: .gitignore  app.py  justfile  pyproject.toml  requirements.txt  serverless.yml  template.yaml  todo_app.py
.chalice/: config.json
tests/: test_todo.py
